deployment/app-deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "e-commerce"
  namespace: "default"
  labels:
    app: "e-commerce"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "e-commerce"
  template:
    metadata:
      labels:
        app: "e-commerce"
    spec:
      containers:
        - name: "e-commerce"
          image: "gcr.io/e-commerce-285913/e-commerce:0.0.4"
          imagePullPolicy: Always
