deployment/db-lb-deployment.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "postgres-service"
  namespace: "default"
  labels:
    app: "postgres"
spec:
  ports:
    - protocol: "TCP"
      port: 5432
      targetPort: 5432
  selector:
    app: "postgres"
  type: "LoadBalancer"
  loadBalancerIP: ""
