deployment/lb-deployment.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "e-commerce-service"
  namespace: "default"
  labels:
    app: "e-commerce"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 5000
  selector:
    app: "e-commerce"
  type: "LoadBalancer"
  loadBalancerIP: ""
