deployment/lb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "e-commerce-ingress-service"
  labels:
    app: "e-commerce"
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - starletclothing.co.uk
      secretName: e-commerce-tls
  rules:
    - host: starletclothing.co.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: e-commerce-service
              servicePort: 80
